--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,9 +7,10 @@ jobs:
     
     steps:
     
-      - name: Install pytest
+      - name: Install dependencies
       - run: |
-           python -m pip install pytest
+           python -m pip install --upgrade pip
+           pip install pytest
       
       
       - name: Set Pythonpath
