--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,11 +6,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    
+     
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+           python-version: "3.7"
+           
+      
       - name: Install dependencies
       - run: |
            python -m pip install --upgrade pip
-           pip install pytest
+           pip install -r requirements.txt
       
       
       - name: Set Pythonpath
@@ -19,7 +26,7 @@ jobs:
            echo $PYTHONPATH
       
       
-      - name: Run test 
+      - name: Run pytest 
       - run: |
             python -m pytest
             
