--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -15,20 +15,19 @@ jobs:
            
       
       - name: Install dependencies
-      - run: |
-           python -m pip install --upgrade pip
-           pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       
       
       - name: Set Pythonpath
-      - run: |
-           export PYTHONPATH="$PWD/src"
-           echo $PYTHONPATH
+        run: |
+          export PYTHONPATH="$PWD/src"
+          echo $PYTHONPATH
       
       
       - name: Run pytest 
-      - run: |
-            python -m pytest
+        run: python -m pytest
             
             
             
