--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,7 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
       
-      
+      # don't think this step is useful
       - name: Set Pythonpath
         run: |
           export PYTHONPATH="$PWD/src"
