--- a/material/06.docker-containers/assets/hello-world-docker-compose/docker-compose.yaml
+++ b/material/06.docker-containers/assets/hello-world-docker-compose/docker-compose.yaml
@@ -1,11 +1,12 @@
 version: '3'
 services:
+
   redis:
     image: redis
+    ports: 
+      - 6379:6379
+    
   web:
-    # COMPLETE HERE
     build: .
     ports:
-      - "5000:8080"
-    environment:
-      # ...
+      - 5000:8080
