--- a/material/06.docker-containers/assets/hello-world-docker-compose/docker-compose.yaml
+++ b/material/06.docker-containers/assets/hello-world-docker-compose/docker-compose.yaml
@@ -1,12 +1,21 @@
 version: '3'
+
 services:
 
   redis:
     image: redis
+    restart: always
     ports: 
       - 6379:6379
-    
+    volumes:
+      - ./data:/data
+
   web:
     build: .
     ports:
       - 5000:8080
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    volumes:
+      - ./data:/data
