--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,191 @@
-argon2-cffi==21.1.0
-arrow==1.2.2
-astroid==2.8.6
+aiohttp==3.8.1
+aiohttp-retry==2.4.6
+aiosignal==1.2.0
+alembic==1.7.7
+altair==4.2.0
+appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astor==0.8.1
+asttokens==2.0.5
+async-timeout==4.0.2
+asyncssh==2.8.1
 atomicwrites==1.4.0
-attrs==21.2.0
+atpublic==3.0.1
+attrs==21.4.0
 backcall==0.2.0
-backports.entry-points-selectable==1.1.1
+base58==2.1.1
+beautifulsoup4==4.10.0
 bleach==4.1.0
+blinker==1.4
+cachetools==5.0.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
+cloudpickle==2.0.0
 colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+cryptography==36.0.2
 cycler==0.11.0
+databricks-cli==0.16.4
 debugpy==1.5.1
-decorator==5.1.0
+decorator==5.1.1
 defusedxml==0.7.1
-distlib==0.3.3
-entrypoints==0.3
-filelock==3.4.0
-fonttools==4.28.2
+dictdiffer==0.9.0
+diskcache==5.4.0
+distro==1.7.0
+docker==4.2.2
+dpath==2.0.6
+dulwich==0.20.35
+dvc==2.9.5
+entrypoints==0.4
+executing==0.8.3
+Flask==2.0.3
+flatten-dict==0.4.2
+flufl.lock==7.0
+fonttools==4.31.2
+frozenlist==1.3.0
+fsspec==2022.2.0
+ftfy==6.1.1
+funcy==1.17
+future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.27
+grandalf==0.6
+greenlet==1.1.2
+htmlmin==0.1.12
+idna==3.3
+ImageHash==4.2.1
+importlib-metadata==4.11.3
 iniconfig==1.1.1
-ipykernel==6.5.1
-ipython==7.29.0
+ipykernel==6.9.2
+ipytest==0.12.0
+ipython==8.1.1
 ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isort==5.10.1
+ipywidgets==7.7.0
+itsdangerous==2.1.1
 jedi==0.18.1
 Jinja2==3.0.3
-jinja2-time==0.2.0
-joblib==1.1.0
-jsonschema==4.2.1
-jupyter==1.0.0
-jupyter-client==7.0.6
-jupyter-console==6.4.0
-jupyter-core==4.9.1
+joblib==1.0.1
+jsonschema==4.4.0
+jupyter-client==7.1.2
+jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
-lazy-object-proxy==1.6.0
-make==0.1.6.post2
+jupyterlab-widgets==1.1.0
+kiwisolver==1.4.0
+mailchecker==4.1.14
+Mako==1.2.0
 MarkupSafe==2.0.1
-matplotlib==3.5.0
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
-mccabe==0.6.1
+missingno==0.5.1
 mistune==0.8.4
-natsort==8.0.0
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.6
-numpy==1.21.4
-opencv-python==4.5.4.60
+mlflow==1.24.0
+multidict==6.0.2
+multimethod==1.7
+nanotime==0.5.2
+nbclient==0.5.13
+nbconvert==6.4.4
+nbformat==5.2.0
+nest-asyncio==1.5.4
+networkx==2.7.1
+notebook==6.4.10
+numpy==1.22.3
 packaging==21.3
-pandas==1.3.4
+pandas==1.4.1
+pandas-profiling==3.1.0
 pandocfilters==1.5.0
-parso==0.8.2
+parso==0.8.3
+pathspec==0.9.0
+phik==0.12.2
+phonenumbers==8.12.45
 pickleshare==0.7.5
-Pillow==8.4.0
-platformdirs==2.4.0
+Pillow==9.0.1
 pluggy==1.0.0
-prometheus-client==0.12.0
-prompt-toolkit==3.0.22
+ply==3.11
+prometheus-client==0.13.1
+prometheus-flask-exporter==0.19.0
+prompt-toolkit==3.0.28
+protobuf==3.19.4
+psutil==5.9.0
+pure-eval==0.2.2
 py==1.11.0
+pyarrow==7.0.0
+pyasn1==0.4.8
 pycparser==2.21
-Pygments==2.10.0
-pylint==2.11.1
-pyparsing==3.0.6
-pyrsistent==0.18.0
-pytest==7.0.1
+pydantic==1.9.0
+pydeck==0.7.1
+pydot==1.4.2
+pygit2==1.9.1
+Pygments==2.11.2
+pygtrie==2.4.2
+Pympler==1.0.1
+pyparsing==3.0.7
+pypiwin32==223
+pyrsistent==0.18.1
+pytest==7.1.1
+python-benedict==0.25.0
 python-dateutil==2.8.2
-pytz==2021.3
-pywinpty==1.1.6
+python-fsutil==0.6.0
+python-slugify==6.1.1
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.3.0
+pywin32==303
+pywinpty==2.0.5
+PyYAML==6.0
 pyzmq==22.3.0
-qtconsole==5.2.0
-QtPy==1.11.2
-scikit-learn==1.0.1
-scipy==1.7.2
+querystring-parser==1.2.4
+requests==2.27.1
+rich==12.0.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+scikit-learn==1.0.2
+scipy==1.8.0
+scmrepo==0.0.7
+seaborn==0.11.2
+semver==2.13.0
 Send2Trash==1.8.0
-setuptools-scm==6.3.2
+shortuuid==1.0.8
+shtab==1.5.3
 six==1.16.0
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==3.0.0
+sklearn==0.0
+smmap==5.0.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.32
+sqlparse==0.4.2
+stack-data==0.2.0
+streamlit==1.7.0
+streamlit-pandas-profiling==0.1.3
+tabulate==0.8.9
+tangled-up-in-unicode==0.1.0
+terminado==0.13.3
+testpath==0.6.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
 toml==0.10.2
-tomli==1.2.2
+tomli==2.0.1
+toolz==0.11.2
 tornado==6.1
+tqdm==4.63.0
 traitlets==5.1.1
-typing_extensions==4.0.0
-virtualenv==20.10.0
+typing_extensions==4.1.1
+tzdata==2022.1
+tzlocal==4.1
+urllib3==1.26.9
+validators==0.18.2
+visions==0.7.4
+voluptuous==0.12.2
+waitress==2.1.1
+watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
-widgetsnbextension==3.5.2
-wrapt==1.13.3
-xlwt==1.3.0
+websocket-client==1.3.1
+Werkzeug==2.0.3
+widgetsnbextension==3.6.0
+xmltodict==0.12.0
+yarl==1.7.2
+zc.lockfile==2.0
+zipp==3.7.0
